--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,4 +13,65 @@
 
 body {
     font-family: Helvetica, Arial, sans-serif;
+    background-color: var(--primary-color);
+
 }
+
+/* HEADER / NAV SECTION */
+
+header {
+    padding: 10px 25px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero_bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
+    z-index: 999;
+}
+
+header h1 {
+    font-weight: bold;
+    margin: 5px;
+    text-shadow: 0 0 20px rgba(216, 233, 168, 0.5);
+    color: var(--quaternary-color);
+}
+
+header a {
+    text-decoration: none;
+    color: var(--quaternary-color);
+}
+
+header a:hover {
+    text-shadow: 10px 10px 10px rgba(78, 159, 61, 0.5);
+    color: var(--tertiary-color);
+}
+
+header a:visited {
+    text-decoration: none;
+}
+
+header nav {
+    margin: 7px 0;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
+    padding: 10px 15px;
+    font-weight: bold;
+    font-size: 1.55vw;
+    line-height: 1.5vw;
+}
+
+/* HEADER / NAV END */
