fixed background value in footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,7 +215,7 @@ footer {
     position: -webkit-sticky;
     position: sticky;
     bottom: 0;
-    background-image: url("../images/hero_bg.jpg");
+    background-image: url("../images/hero_bg1.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
