--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,6 +141,7 @@ the typing animation into 20 steps */
     color: var(--quaternary-color);
     line-height: 1.5;
     border-left: 2px solid var(--tertiary-color);
+    min-width: max(50%, 200px);
 }
 
 .aboutme-poem {
@@ -167,7 +168,8 @@ the typing animation into 20 steps */
 .about-me img {
     border-radius: 50%;
     flex: 1 1 10%;
-    width: 20%;
+    min-width: max(20%, 200px);
+    max-width: 50%;
     padding: 10px 20px;
     margin: auto;
 }
@@ -180,29 +182,104 @@ the typing animation into 20 steps */
 
 /* PORTFOLIO SECTION */
 
-.portfolio-cards {
-    align-content: center;
+.portfolio {
+    display: flex;
     justify-content: center;
-    padding: 0 10% 0 10%;
 }
 
-.portfolio-cards h2 {
-    text-align: center;
-    margin: 0 auto;
+.portfolio h2 {
+    margin: auto 20px;
 }
 
-.portfolio-cards img {
+.projects {
     width: 80%;
-    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.portfolio-cards img:hover {
-    opacity: .5;
+.project {
+    background: #1E5128;
+    color: #D8E9A8;
+    flex: 1;
+    margin: 20px;
+}
+
+.project img {
+    width: 100%;
+}
+
+.project-info {
+    padding: 25px;
+    line-height: 1.3;
+    text-align: center;
+    align-items: center;
+}
+
+.project-info h3 {
+    font-size: 28px;
+}
+
+.project-primary {
+    order: 1;
+}
+
+.project-secondary {
+    order: 2;
 }
 
 /* PORTFOLIO END */
 
 /* CONTACT ME SECTION */
+
+.contact {
+    display: flex;
+    margin: auto;
+}
+
+.contact h2 {
+    margin: auto 20px;
+}
+
+.contact-form {
+    border: none;
+    color: var(--quaternary-color);
+    background-color: rgba(30, 81, 41, 0.6);
+    padding: 20px;
+    width: 40%;
+    margin: 3.5%;
+    border-radius: 5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.form-input {
+    display: block;
+    border: 1px solid var(--primary-color);
+    font-size: 12px;
+    margin-bottom: 15px;
+    width: 100%;
+    border-radius: 10%;
+    padding: 7px 15px;
+}
+
+.contact-info {
+    margin: auto;
+    align-content: center;
+    font-size: 16px;
+    color: var(--quaternary-color);
+}
+
+.contact-socials img {
+    width: 10%;
+    justify-content: space-around;
+    display: inline;
+}
+
+.contact a {
+    text-decoration: none;
+}
+
 /* CONTACT ME END */
 
 /* FOOTER SECTION */
