--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,7 +114,7 @@ header nav ul li a {
     gap: 10px;
     padding: 40px 10px;
     flex-wrap: wrap;
-    border-bottom: 1px dotted #1E5128;
+    border-bottom: 1px dotted var(--secondary-color);
 }
 
 .intro {
@@ -165,7 +165,7 @@ header nav ul li a {
 .portfolio {
     display: flex;
     justify-content: center;
-    border-bottom: 1px dotted #1E5128;
+    border-bottom: 1px dotted var(--secondary-color);
     margin: 20px;
     margin-top: 40px;
     flex-direction: column;
@@ -196,8 +196,8 @@ header nav ul li a {
 }
 
 .project {
-    background: #1E5128;
-    color: #D8E9A8;
+    background: var(--secondary-color);
+    color: var(--quaternary-color);
     flex: 1;
     margin: 20px;
 }
@@ -273,8 +273,6 @@ header nav ul li a {
 .contact-socials a {
     display: flex;
     width: 15%;
-    /* min-width: 100px; */
-    /* display: inline; */
     align-content: center;
     justify-content: center;
     text-decoration: none;
@@ -299,9 +297,6 @@ footer {
     color: var(--secondary-color);
     font-size: calc(7px + 1.5vw);
 }
-
-/* footer h3 {
-} */
 
 footer a {
     text-decoration: none;
